Bug 109997 - Resizing and moving LibreOffice frame is hanging UI in VCL salinst.cxx line 738
Summary: Resizing and moving LibreOffice frame is hanging UI in VCL salinst.cxx line 738
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: haveBacktrace
: 110430 (view as bug list)
Depends on:
Blocks: VCL-Scheduler Crash-Assert
  Show dependency treegraph
 
Reported: 2017-07-29 03:55 UTC by V Stuart Foote
Modified: 2017-09-01 13:19 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
stack trace at the salinst assert (38.17 KB, text/plain)
2017-07-29 04:01 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2017-07-29 03:55:34 UTC
Get error dialog

Assertion failed!
Program C:\LODev600_x86_20170729_TB39\program\vcllo.dll
File: C:\/cygwin/home/tinderbox/master/vcl/win/app/salinst.cxx
Line: 738

Expression: 0 -- wParam

Can Ignore it and proceed to use GUI
Comment 1 V Stuart Foote 2017-07-29 04:01:12 UTC
Created attachment 134961 [details]
stack trace at the salinst assert
Comment 2 V Stuart Foote 2017-07-29 04:19:06 UTC
Noticed this last couple of TB39/42 builds when moving or resizing the LO window frame.

This seems to relate to lo/system timer rework for bug 109123 [1], on Windows 10 Pro 64-bit en-US with TB39 20170729 build 3c75009a677ae950105a65c699b16caf72b516b0

Still seeing this even with this commit present
https://cgit.freedesktop.org/libreoffice/core/commit/?id=c23f735eb7579477b5de3850eac075a21329c06b

Annoying more than anything, seem to be able to safely Ignore...

=-ref-=
https://gerrit.libreoffice.org/40190
Comment 3 Aron Budea 2017-07-30 16:33:33 UTC
Confirmed with 6.0 master build (a4bab9609b04cb644859cf548bb4739a9d5aa590) / Windows 7.
Comment 4 Jan-Marek Glogowski 2017-08-01 11:13:41 UTC
*** Bug 110430 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2017-08-01 16:55:15 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=50799a721c7ddcf9475a1b79984ed64ddd7cdf57

tdf#109997 WIN don't post a callback event directly

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2017-09-01 08:46:02 UTC
Polite ping: is this bug fixed? if so, please close it as RESOLVED FIXED
Comment 7 V Stuart Foote 2017-09-01 13:19:15 UTC
Sorry, yes this is fixed.